--- a/Table with Design.html
+++ b/Table with Design.html
@@ -4,11 +4,12 @@
 <style>
 table,td,th {border: 3px solid red; border-collapse: collapse;}
 td{color: lightgreen;}
+th{background-color: lightblue;}
 </style>
 </head>
 <body>
 <table>
-<tr style ="background-color: lightblue;">
+<tr>
 <th> S.NO </th>
 <th> Subject </th>
 <th> Marks </th>
